# mcp-munkireport-api

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
docs/: QUICKSTART.md  SUMMARY.md  UPDATE_CONFIG.md  claude_desktop_config.json
src/mcp_munkireport_api/: __init__.py  __main__.py  config.py  mcp_server.py  schemas.py  server.py
src/mcp_munkireport_api/client/: __init__.py  api_client.py
tests/: __init__.py  conftest.py  test_api.py  test_client.py
