[project]
name = "mcp-munkireport-api"
version = "0.1.0"
description = "FastAPI wrapper for MunkiReport API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=2.14.2,<4.0.0",
    # Pinned minimums to resolve Dependabot security alerts on transitive deps
    "authlib>=1.6.9",
    "PyJWT>=2.12.0",
    "cryptography>=46.0.5",
    "python-multipart>=0.0.22",
    "urllib3>=2.6.3",
    "requests>=2.33.0",
]

[project.scripts]
mcp-munkireport-api = "mcp_munkireport_api.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
